import 'package:cloud_firestore/cloud_firestore.dart';
import 'package:firebase_auth/firebase_auth.dart';

import 'prayer_repository.dart';
import '../services/coin_service.dart';

const _prayers = ['Fajr', 'Dhuhr', 'Asr', 'Maghrib', 'Isha'];

class QadaData {
  final Map<String, int> completedQada;
  final Map<String, int> manualDebt;
  final Map<String, int> autoMissed;

...
